sumo/tests/traci/ChangeVehicleValue/ChangeRouteByID/InvalidRouteId/testclient.prog
simstep_repeat 1 30 1 1
setvalue 0xc4 0x53 veh0 <string> xxx
simstep 70 1
